@@ -65,11 +65,6 @@ public abstract class StorageService {
 
     private static final Log log = LogFactory.getLog(StorageService.class);
 
-    /**
-     * The JetS3t suite version number implemented by this service.
-     */
-    public static final String VERSION_NO__JETS3T_TOOLKIT = "0.8.1";
-
     public static final int BUCKET_STATUS__MY_BUCKET = 0;
     public static final int BUCKET_STATUS__DOES_NOT_EXIST = 1;
     public static final int BUCKET_STATUS__ALREADY_CLAIMED = 2;
